tests/snapshots/snapshots__limits_collapsed_160x45.snap
---
source: tests/snapshots.rs
expression: "harness.screen(160, 45)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                                                         In Progress  2/2                                                   2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔
 ▌ Backlog         3
   In Progress   2/2   ▌ Write the README                                                 ▎ Calmer card style                                                D
   Done          2/1   ▌ Cover install, usage, keys and the file format.                  ▎ Tiles with an accent bar.                                        o
                       ▌ ◷ 1d ago                                                         ▎ ◷ 12m ago                                                        n
                                                                                                                                                             e
                       ▎ Record a demo                                                    ▎ Command table
                       ▎ Commit the .tape file too.                                       ▎ Every keybinding defined once.
                       ▎ ◷ 3d ago                                                         ▎ ◷ 1h ago

                       ▎ Package release binaries
                       ▎ ◷ Aug 20





























 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit   H/L move   d delete   / search   ? help   : commands
