tests/snapshots/snapshots__limits_collapsed_active_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 Snapshot Board   Board · All tasks

 Backlog 3 · In Progress 2/2 · Done 2/1
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

 Collapsed
 z to expand












 BOARD   ● saved   j/k card   h/l column   v view   n/N new
