tests/snapshots/snapshots__long_text_board_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              A column with a very long name th…  2  Done  1
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ A column with … 2
   Done            1   ▌ A very long task title that keeps    ▎ exact
                       ▌ going well past the width of any…    ▎ ◷ 1d ago
                       ▌ • an indented list item
                       ▌ ◷ 2m ago

                       ▎ 日本語のタスク名と絵文字 🦀🚀
                       ▎ が混ざったタイトル
                       ▎ 全角文字の説明文です。幅の計算を…
                       ▎ ◷ 3h ago















 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit
