tests/snapshots/snapshots__long_text_detail_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks
                                                            ▎
  Columns              A column with a very long name th…  2▎  日本語のタスク名と絵文字 🦀🚀
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▎  が混ざったタイトル
 ▌ A column with … 2                                        ▎
   Done            1   ▎ A very long task title that keeps  ▎  A column with a very long name th…
                       ▎ going well past the width of any…  ▎  updated 3h ago · created Aug 28
                       ▎ • an indented list item            ▎
                       ▎ ◷ 2m ago                           ▎  全角文字の説明文です。幅の計算を確
                                                            ▎  かめます。
                       ▌ 日本語のタスク名と絵文字 🦀🚀      ▎
                       ▌ が混ざったタイトル                 ▎
                       ▌ 全角文字の説明文です。幅の計算を…  ▎
                       ▌ ◷ 3h ago                           ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
                                                            ▎
 DETAIL   ● saved   e edit   H/L move   d delete   Esc close   j/k scroll   ? help   : commands
