tests/snapshots/snapshots__markdown_card_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress     2   ▌ Write the README        ▎ Calmer card style       ▎ Set up CI
   Done            2   ▌ Before the release      ▎ Tiles with an accent…   ▎ fmt, clippy and test…
                       ▌ ◷ 1d ago   ✓ 1/3        ▎ ◷ 12m ago               ▎ ◷ 5h ago

                       ▎ Record a demo           ▎ Command table           ▎ Snapshot tests
                       ▎ Commit the .tape fil…   ▎ Every keybinding def…   ▎ ◷ 1d ago
                       ▎ ◷ 3d ago                ▎ ◷ 1h ago

                       ▎ Package release
                       ▎ binaries
                       ▎ ◷ Aug 20













 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit
