tests/snapshots/snapshots__no_color_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.render(60, 20)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        " TUI KANBAN   Snapshot Board                         saved  ",
        "╭──────────────────────────────────────────────────────────╮",
        "│ Backlog  3                                               │",
        "│╭────────────────────────────────────────────────────────╮│",
        "││Write the README                                        ││",
        "││                                                        ││",
        "││Cover install, usage, keys and the file format.         ││",
        "││ Backlog  •  updated 1d                                 ││",
        "│╰────────────────────────────────────────────────────────╯│",
        "│╭────────────────────────────────────────────────────────╮│",
        "││Record a demo                                           ││",
        "││                                                        ││",
        "││Commit the .tape file too.                              ││",
        "││ Backlog  •  updated 3d                                 ││",
        "│╰────────────────────────────────────────────────────────╯│",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "╰──────────────────────────────────────────────────────────╯",
        " tab rail  •  v view  •  hjkl move  •  n new  •  e edit  •  ",
    ],
    styles: [
        x: 0, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: White, bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 58, y: 4, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: White, bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 58, y: 5, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: DarkGray, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Blue, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
