tests/snapshots/snapshots__palette_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog    ╭ Commands ────────────────────────────────────────────────────────────╮
   In Progress│  › Type a command, a lane or a task                                  │
   Done       │                                                                      │py and test…
              │ ▌ Open details                                                Enter  │
              │   New task below                                                  n  │
              │   New task above                                                  N  │tests
              │   Quick add to this lane                                          a  │
              │   Edit task                                                       e  │
              │   Duplicate task                                                  y  │
              │   Move to…                                                        m  │
              │   Edit description in $EDITOR                                     E  │
              │   Delete task                                                     d  │
              │   Move task left                                                  H  │
              │   Move task right                                                 L  │
              │   Move task down                                                  J  │
              │   Move task up                                                    K  │
              │   Search                                                          /  │
              │   Previous column                                                 h  │
              │   Next column                                                     l  │
              │                                                                      │
              │  Enter run   ↓/↑ choose   Esc close                                  │
              ╰──────────────────────────────────────────────────────────────────────╯



 COMMAND   ● saved   Enter run   ↓/↑ choose   Esc close
