tests/snapshots/snapshots__palette_query_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog    ╭ Commands ────────────────────────────────────────────────────────────╮
   In Progress│  › snap                                                              │
   Done       │                                                                      │py and test…
              │ ▌ Go to task: Snapshot tests  Done                                   │
              │                                                                      │
              │                                                                      │tests
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │  Enter run   ↓/↑ choose   Esc close                                  │
              ╰──────────────────────────────────────────────────────────────────────╯



 COMMAND   ● saved   Enter run   ↓/↑ choose   Esc close
